--- a/src/styles.css
+++ b/src/styles.css
@@ -117,3 +117,13 @@ button:focus-visible {
   right:25px;
 
 }
+.fab-danger{
+  border-radius:100%;
+  bottom:25px;
+  font-size:20px;
+  width:50px;
+  height:50px;
+  position:fixed;
+  left:25px;
+
+}
